# gstdropper

./: configure.ac
src/: Makefile.am  drop.c  drop.h
